--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ projects/LegoReader/.DS_Store
 projects/LegoReader/.DS_Store
 .DS_Store
 projects/LegoReader/.DS_Store
+.DS_Store
+projects/.DS_Store
+projects/LegoReader/.DS_Store
