--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ projects/LegoReader/.DS_Store
 .DS_Store
 projects/.DS_Store
 projects/LegoReader/.DS_Store
+projects/.DS_Store
+projects/LegoReader/.DS_Store
+projects/LegoReader/data/.DS_Store
+projects/QRreader/.DS_Store
