pushing changes to the calibrations

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ projects/.DS_Store
 projects/LegoReader/.DS_Store
 projects/LegoReader/data/.DS_Store
 projects/QRreader/.DS_Store
+projects/.DS_Store
+.DS_Store
