--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ projects/LegoReader/data/.DS_Store
 projects/QRreader/.DS_Store
 projects/.DS_Store
 .DS_Store
+projects/.DS_Store
+.DS_Store
+projects/LegoReader/.DS_Store
