Trying to fix NPE in canvas

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ projects/.DS_Store
 .DS_Store
 projects/LegoReader/.DS_Store
 projects/LegoReader/.DS_Store
+projects/.DS_Store
+projects/LegoReader/.DS_Store
