--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ projects/LegoReader/.DS_Store
 projects/LegoReader/.DS_Store
 projects/.DS_Store
 projects/LegoReader/.DS_Store
+.DS_Store
+.DS_Store
+projects/.DS_Store
