adding Jesus's project

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@ projects/.DS_Store
 projects/.DS_Store
 projects/.DS_Store
 projects/LegoReader/.DS_Store
+.DS_Store
+projects/.DS_Store
+projects/.DS_Store
+.DS_Store
